# watp-sdk-python

./: README.md  pyproject.toml
.github/workflows/: ci.yml
protocol/: watp-message-envelope.schema.json
protocol/fixtures/: invalid-hash-concluded-invalid-payment-url.json  invalid-hash-counter-missing-negotiation-id.json  invalid-hash-interest-missing-buyer-url.json  valid-hash-concluded-payment-url.json  valid-hash-interest.json
scripts/: watp-sdk-conformance-python.py
watp_sdk/: __init__.py  auth.py  builders.py  envelope.py  hashing.py  types.py
